--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-	"name": "ol3-amd",
-	"version": "0.2.0",
-  	"description": "Openlayers 3 build with amd wrapper",
-  	"repository": {
-		"type": "git",
-		"url": "https://github.com/OnroerendErfgoed/beheersplannen.git"
-	},
-  	"devDependencies": {
-    	"openlayers": "~3.5.0"
-  	}
+  "name": "ol3-amd",
+  "version": "0.2.0",
+  "description": "Openlayers 3 build with amd wrapper",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OnroerendErfgoed/beheersplannen.git"
+  },
+  "devDependencies": {
+    "openlayers": "~3.5.0"
+  },
+  "main": "./ol",
+  "dojoBuild": "package.js"
 }
